kubernetes/apps/flux-system/flux-operator/instance/github/webhooks/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webhook-receiver
spec:
  parentRefs:
    - name: external
      kind: Gateway
  hostnames:
    - "flux-webhook.altena.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hook/
      backendRefs:
        - name: webhook-receiver
          kind: Service
          port: 80
